--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -1,5 +1,5 @@
 ---
-import MainLayout from "~/layouts/MainLayout.astro";
+import MainLayout from "../components/layouts/MainLayout.astro";
 ---
 
 <MainLayout title="Dashboard" user={{ id: "1", name: "Test User" }}>
