--- a/src/components/global/Sidebar.astro
+++ b/src/components/global/Sidebar.astro
@@ -15,7 +15,7 @@ const menus = [
 const currentPath = Astro.url.pathname;
 ---
 
-<section class={`gap-6 h-screen ${user ? "flex" : "hidden"}`}>
+<section class={`gap-6 z-50 h-screen ${user ? "flex" : "hidden"}`}>
   <div class="bg-gray-900 fixed top-0 h-screen z-10 w-16 text-white px-2">
     <!-- Main flex container -->
     <div class="flex flex-col h-full py-2">
